--- a/css/stl.css
+++ b/css/stl.css
@@ -61,6 +61,7 @@ ul {
 }
 
 .lt-header{
+
     border-top: 1px solid #1d2c33;
     border-bottom: 1px solid #1d2c33;
     /* box-shadow: 0 0 6px #005b8e, inset 0 0 6px #005b8e; */
@@ -88,18 +89,92 @@ ul {
     padding: 0 8px;
 }
 
+.alt-1 {
+    color: #00eeee;
+}
+.alt-2 {
+    color: #ffcc00;
+}
+
+#lt-header-top-left {
+    position: absolute;
+    top: 25px;
+}
 
 #lt-header-top-right {
     position: absolute;
     top: 25px;
 }
+
+#lt-header-bottom-left {
+    position: absolute;
+    top: 550px;
+}
+
+#lt-header-bottom-left .lt-header-left-section{
+    width: 45%
+}
+#lt-header-bottom-left .lt-header-right-section{
+    width: 45%
+}
+
+#lt-bottom-boxes-1 {
+    margin-top: 1px;
+    float: right;
+    border: 1px solid #6fc0ba;
+    border-radius: 2px;
+    height: 4px;
+    width: 35px;
+}
+
+#lt-bottom-boxes-2 {
+    margin-top: 1px;
+    margin-right: 20px;
+    float: right;
+    border: 1px solid #1b2f2d;
+    border-radius: 2px;
+    height: 4px;
+    width: 25px;
+}
+
+#lt-bottom-boxes-3 {
+    margin-top: 1px;
+    margin-right: 4px;
+    float: right;
+    border: 1px solid #6fc0ba;
+    border-radius: 2px;
+    height: 4px;
+    width: 30px;
+}
+
+
 #lt-header-bottom-right {
     position: absolute;
     top: 550px;
 }
 
+.lt-header-animator-left {
+    position: absolute;
+    top: 300px;
+    width: 100%;
+    height: 2px;
+    border-top: 1px solid #1d2c33;
+    border-bottom: 1px solid #1d2c33;
+    visibility: hidden;
+}
+
+.lt-header-animator-right {
+    position: absolute;
+    top: 300px;
+    width: 100%;
+    height: 2px;
+    border-top: 1px solid #1d2c33;
+    border-bottom: 1px solid #1d2c33;
+    visibility: hidden;
+}
 
 .content-container {
+
     border: 2px solid #6fc0ba;
     border-radius: 2px;
     /* box-shadow: 0 0 6px #005b8e, inset 0 0 6px #005b8e; */
@@ -136,67 +211,16 @@ ul {
 
 }
 
-
 #lt-readme {
     position: absolute;
     top: 60px;
-    overflow: visible;
+    overflow: hidden;
 }
 
 #lt-readme .content {
     height: 300px;
-    overflow: visible;
-}
-
-
-#lt-globalization {
-    position: absolute;
-    top: 60px;
-    width: 470px;
-}
-
-#lt-globalization .content {
-    height: 260px;
     overflow: hidden;
 }
-
-#lt-bandwidth {
-    position: absolute;
-    top: 390px;
-}
-/* ================================= ^ USED ^ ================================= */
-
-
-.alt-1 {
-    color: #00eeee;
-}
-.alt-2 {
-    color: #ffcc00;
-}
-
-
-
-.lt-header-animator-left {
-    position: absolute;
-    top: 300px;
-    width: 100%;
-    height: 2px;
-    border-top: 1px solid #1d2c33;
-    border-bottom: 1px solid #1d2c33;
-    visibility: hidden;
-}
-
-.lt-header-animator-right {
-    position: absolute;
-    top: 300px;
-    width: 100%;
-    height: 2px;
-    border-top: 1px solid #1d2c33;
-    border-bottom: 1px solid #1d2c33;
-    visibility: hidden;
-}
-
-
 #lt-mobile-readme {
     position: absolute;
     top: 260px;
@@ -210,10 +234,21 @@ ul {
     height: 290px;
 }
 
+#lt-bandwidth {
+    position: absolute;
+    top: 390px;
+}
 
-/* ================================= ^ NOT USED ^ ================================= */
+#lt-globalization {
+    position: absolute;
+    top: 60px;
+    width: 470px;
+}
 
-
+#lt-globalization .content {
+    height: 260px;
+    overflow: hidden;
+}
 
 #lt-command-line {
     width: 318px;
@@ -291,20 +326,42 @@ ul {
     color: #000;
 }
 
+.folder-container {
+    margin: 8px 18px 0;
+    float: left;
+    cursor: pointer;
+}
 
 
+.folder-label{
+    background-color: #000;
+    color: #fff;
+    font-size: 10px;
+    margin-bottom: 5px;
+    padding: 1px;
+    width: 70px;
+    text-transform: uppercase;
+    border-radius: 2px;
+}
 
+.folder-container:hover .folder-label{
+    background-color: #feb400;
+    color: #000;
+}
 
-
-
-
-
+.folder-label.selected{
+    background-color: #feb400;
+    color: #000;
+}
 
 #lt-launch-github {
     margin-top: 20px;
 }
 
-
+.selected-folder {
+    background-color: #feb400;
+    color: #000;
+}
 
 .folder-big {
     background-image: url(../images/encom_folder_big.png);
@@ -314,7 +371,13 @@ ul {
     height: 63px;
 }
 
-
+.folder-small {
+    background-image: url(../images/encom_folder_small.png);
+    padding: 0px;
+    margin: 0px;
+    width:80px;
+    height: 49px;
+}
 
 #lt-keyboard {
     margin-left: 8px;
@@ -409,15 +472,7 @@ ul {
     50% {opacity: 1.0;}
     100% {opacity: 0.3;}
 }
-
-
-
-
-
-
-
-
-
+}
 
 
 @media (max-width: 1100px) { 
@@ -527,11 +582,6 @@ ul {
     }
 
 }
-
-
-
-
-
 
 @media (min-width: 1600px) { 
 
