--- a/public/style.css
+++ b/public/style.css
@@ -52,6 +52,9 @@ ul {
 }
 
 
+.alt-1 {
+   color: #ffcc00; 
+}
 
 
 /* ================================= light table (lt) ================================= */
@@ -97,7 +100,7 @@ ul {
 
 .lt-header-left-section {
     float: left;
-    width: 70%;
+    width: 45%;
     background-color: #000;
     margin-left: -5px;
     padding: 0 8px;
@@ -105,7 +108,7 @@ ul {
 
 .lt-header-right-section {
     float: right;
-    width: 20%;
+    width: 45%;
     background-color: #000;
     text-align: right;
     margin-right: -5px;
