--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,27 @@
+
 body {
     background-color: black;
     font-size:6pt;
     color: #fff;
-
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
     overflow: hidden;
     font-family: 'Inconsolata', monospace;
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    align-items: center;    
+    justify-content: center;
 }
+
+.light-table {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;    
+    justify-content: center; 
+}
+
 
 a {
     color: #00eeee;
@@ -25,7 +35,6 @@ h2 {
     font-size: 14pt;
     line-height: 16pt;
     text-transform: uppercase;
-    
 }
 
 
@@ -53,7 +62,7 @@ ul {
 
 
 .alt-1 {
-   color: #ffcc00; 
+color: #ffcc00; 
 }
 
 
@@ -67,9 +76,9 @@ ul {
 
 
 #lt-container-outside{
-    position:relative;
-    width: 95vw;
-    height: 97vh;
+    position:absolute;
+    width: 2400px;
+    height: 1200px;
     z-index: 10;
     
     display: flex;
@@ -79,7 +88,7 @@ ul {
 }
 
 #lt-container-inside {
-    position:relative;
+    position:absolute;
     width: 97%;
     height: 98%;
     z-index: 20;
@@ -93,7 +102,7 @@ ul {
     color: #fff;
     padding: 2px 0;
     visibility: visible;
-    width: 90%;
+    width: 93%;
     font-size: 10pt;
 
 }
@@ -121,7 +130,7 @@ ul {
     border: 2px solid #6fc0ba;
     border-radius: 2px;
     padding: 3px;
-    width: 90%;
+    width: 93%;
 }
 
 .content {
@@ -161,20 +170,19 @@ ul {
 #lt-left-column{
     position: relative;
     width: 50%;
-
-      
     display: flex;           
     flex-direction: column;  
     align-items: center; 
+    padding-left: 1%;
 
 }
 #lt-right-column{
     position: relative;
     width: 50%;
-
     display: flex;           
     flex-direction: column;  
     align-items: center; 
+    padding-right: 1%;
 }
 
 
@@ -204,6 +212,29 @@ ul {
     width: 45%
 }
 
+#retro-clock {
+  font-size: 0.8rem;
+}
+
+#retro-date {
+  font-size: 0.8rem;
+}
+
+#status-dot {
+  width: 8px;
+  height: 8px;
+  background-color: #00ffcc; 
+  border-radius: 50%;
+  display: inline-block;
+  box-shadow: 0 0 5px #00ffcc, 0 0 5px #00ffcc;
+  animation: pulse 3s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 0.9; }
+  50% { transform: scale(1.3); opacity: 1; }
+  100% { transform: scale(1); opacity: 0.9; }
+}
 
 
 
@@ -211,45 +242,52 @@ ul {
 /* ================================= Bottom small boxes left ================================ */
 
 #lt-bottom-boxes-1 {
-    margin-top: 5px;
+    margin-top: 4px;
     float: right;
     border: 1px solid #6fc0ba;
     border-radius: 2px;
-    height: 4px;
-    width: 35px;
+    height: 5px;
+    width: 30px;
+
 }
 
 #lt-bottom-boxes-2 {
-    margin-top: 5px;
-    margin-right: 6px;
+    margin-top: 4px;
+    margin-right: 10px;
     float: right;
     border: 1px solid #1b2f2d;
     border-radius: 2px;
-    height: 4px;
-    width: 25px;
-}
-
-#lt-bottom-boxes-3 {
-    margin-top: 5px;
-    margin-right: 4px;
-    float: right;
-    border: 1px solid #6fc0ba;
-    border-radius: 2px;
-    height: 4px;
+    height: 5px;
     width: 30px;
 }
 
+#lt-bottom-boxes-3 {
+    margin-top: 4px;
+    margin-right: 10px;
+    float: right;
+    border: 1px solid #6fc0ba;
+    border-radius: 2px;
+    height: 5px;
+    width: 30px;
+}
 
+.bts {
+    transition: all 0.2s ease;  
+    cursor: pointer; 
+}
 
-
+.btn:hover {
+    background-color: #ffcc002b;
+    transform: scale(1.1);      /* optional: slightly enlarge */
+}
 
 
 /* ================================= README ================================= */
 #lt-readme {
     position: relative;
     overflow: visible;
-    margin-top: 60px; 
-    height: calc(50% - 60px); 
+    top: 60px; 
+    height: 50%;
 }
 
 #lt-readme .content {
@@ -259,69 +297,28 @@ ul {
 
 /* ================================= lt-input ================================= */
 
-#lt-input {
+#game-of-life {
     position: relative;
-    margin-top: 30px;
-    height: calc( 39% - 50px);
+    top: 100px;
+    height: calc(50% - 100px - 60px - 60px);
     font-size: 10pt;
 }
 
-#lt-command-line {
-    width: calc(100% - 10px);
-    float: left;
-    height: 100%;
-    margin-top: 5px;
-    padding: 5px;
-    overflow: hidden;
-}
-
-#lt-command-lines {
-    white-space: nowrap;
-}
-
-#lt-command-line-header {
-    border-bottom: 1px dashed #fff;
-    padding-bottom: 3px;
-    text-transform: uppercase;
+#gol-canvas {
+    width: calc( 100% - 2px);
+    height: calc(100% - 2px);
+    display: block;
+    background-color: #000;
 
 }
-
-
-.command {
-    clear: both;
-    padding-top: 5px;
-    font-size: 8pt;
-    font-size: 10pt;
-    color: #aaa; 
-}
-
-[contenteditable]:focus {
-    outline: none !important;
-    box-shadow: none !important;
-    border: none !important;
-}
-
-
-
-.command-text {
-    color: #aaa;
-}
-
-
-
-.prompt {
-  user-select: none;
-  pointer-events: none;
-}
-
 
 
 /* ================================= globalization ================================= */
 
 #lt-globalization {
     position: relative;
-    top: 60px;
-    height: calc(50% - 70px + 39%);
+    top: 59px;
+    height: calc(100% - 170px);
 }
 
 #lt-globalization .content {
@@ -367,15 +364,36 @@ ul {
     background-image: url(./images/encom_folder_small.png);
     padding: 0px;
     margin: 0px;
-    width:80px;
+    width: 80px;
     height: 49px;
 }
 
 
 
+/*=================================================================================*/
 
 
 
+@media (min-width: 1600) {
+    #lt-container-outside{
+        width: 1600px;
+        height: 700px;
+    }
+}
 
 
+@media (min-width: 1800px) {
+    #lt-container-outside{
+        width: 1800px;
+        height: 900px;
+    }
 
+}
+
+@media (min-width: 2400px) {
+    #lt-container-outside {
+        width: 2400px;
+        height: 1200px;
+    }
+
+}
